[project]
name = "blog-website"
version = "0.1.0"
description = "FastApi"
authors = [
    {name = "moamen nader", email = "momennader37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

